@@ -36,6 +36,9 @@ MComix 0.93
     - Settings in the Enhance dialog can now be remembered using the "Save"
       button.
 
+    - MComix can now use Chardet (http://chardet.feedparser.org) for guessing
+      filename encodings in archives, if installed.
+
 MComix 0.92
 Release date: 27.05.2011
 
